[package]
name = "dhxs-launcher"
version = "0.9.1"
edition = "2024"

[dependencies]
adw = { version = "0.7", package = "libadwaita", features = ["v1_7"] }
crc32fast = "1.4"
glob = "0.3"
gtk = { version = "0.9", package = "gtk4", features = ["v4_18"] }
shellexpand = "3.1"
shlex = "1.3"
xdg = "2.5"

[build-dependencies]
glib-build-tools = "0.20.0"
